修改禁用提示

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <noscript>
-      <strong>如果你禁用了javascript功能，会导致无法浏览本网站！</strong>
+      如果你禁用了javascript功能，会导致无法浏览本网站！
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
